# sslc

./: .gitignore  CMakeLists.txt  Makefile  README.md  compat.c  compat.h  compat.io.h  compat.stdlib.h  compat.string.h  compat.windows.h  compile.c  compiler.mjs  extra.c  extra.h  gencode.c  gencode.h  internal.h  lex.c  lex.h  mcpp_directive.c  mcpp_eval.c  mcpp_expand.c  mcpp_main.c  mcpp_support.c  mcpp_system.c  noconfig.h  opextra.h  optimize.c  parse.c  parse.h  parseext.c  parseext.h  resource.h  sfalltok.h  sslc.rc  sslc.sln  sslc.vcxproj  sslc.vcxproj.filters  system.h  tokens.h
.github/workflows/: build-win.yml  ci.yml  linux.yml
docs/: sslc_readme.md
test/: .gitignore  test_on_fallout2_rpu.bash  test_on_fallout2_rpu_run.bash  test_on_fallout2_rpu_setup.bash  tests.bash  utils.bash
test/embedded/include/: say_hello.h
test/embedded/successful/: gl_break_statement.int.expected  gl_break_statement.ssl  gl_break_statement.stdout.expected  source_with_include.ssl
test/embedded/unsuccessful/: include_loop_1.ssl  include_loop_1.stdout.expected  include_loop_2.ssl  include_loop_2.stdout.expected  missing_parenthesis.ssl  missing_parenthesis.stdout.expected  preprocessor_errors.ssl  preprocessor_errors.stdout.expected  unknown_identifier.ssl  unknown_identifier.stdout.expected  wrong_proc_args.ssl  wrong_proc_args.stdout.expected
test/include/: hello_world_text.h  say_hello.h
test/with_optimizer/: source1.ssl  source1.stdout  source_with_include.int  source_with_include.ssl  source_with_include.stdout
